--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Bianca Githa">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <title>DRESS UP WITH BIANCA - Home Page</title>
 
@@ -107,7 +108,7 @@
                 <div class="text-content">
                   <h6>we are here to present</h6>
                   <h4>OUR DRESS UP<br> BEST DESIGN COLLECTION </h4>
-                  <p>Dress Up With Bianca will present you our best designs collection that are created by love four our dear client.</p>
+                  <p>Dress Up With Bianca will present you our best designs collection that are created by love for our dear client.</p>
                   <a href="services.html" class="filled-button">our services</a>
                 </div>
             </div>
@@ -128,7 +129,6 @@
         </div>
     </div>
     <!-- Banner Ends Here -->
-
     <div class="request-form">
       <div class="container">
         <div class="row">
@@ -142,7 +142,6 @@
         </div>
       </div>
     </div>
-
     <div class="services">
       <div class="container">
         <div class="row">
@@ -428,11 +427,11 @@
     <script src="assets/js/accordions.js"></script>
 
     <script language = "text/Javascript"> 
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
+      cleared[0] = cleared[1] = cleared[2] = 0; 
+      function clearField(t){                  
+      if(! cleared[t.id]){                 
+          cleared[t.id] = 1;  
+          t.value='';         
           t.style.color='#fff';
           }
       }
